--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "react": "^19.1.1",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
