--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "firebase": "^12.4.0",
+    "firebase-functions": "^6.6.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1"
