--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "date-fns": "^2.30.0",
     "firebase": "^12.4.0",
     "firebase-functions": "^6.6.0",
+    "html5-qrcode": "^2.3.8",
+    "onnxruntime-web": "^1.15.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1"
