--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "date-fns": "^2.30.0",
     "firebase": "^12.4.0",
     "firebase-functions": "^6.6.0",
