--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.5.0",
+    "openai": "^4.20.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
