--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@emailjs/nodejs": "^5.0.2",
+    "axios": "^1.6.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
-    "openai": "^4.20.0",
-    "axios": "^1.6.0"
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
